--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta property="og:title" content="Find Hostels Near Kirinyaga University | Affordable Student Accommodation" />
     <meta property="og:description" content="Discover affordable hostels near Kirinyaga University. Browse listings, connect with hostel owners, and secure your perfect student accommodation today." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+<!--     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" /> -->
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@hostelconnect" />
